--- a/package.json
+++ b/package.json
@@ -1,33 +1,62 @@
 {
-  "name": "create-react-app-lambda",
-  "version": "0.5.0",
-  "private": true,
-  "dependencies": {
-    "axios": "^0.19.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "start:lambda": "netlify-lambda serve src/lambda",
-    "build": "run-p build:**",
-    "build:app": "react-scripts build",
-    "build:lambda": "netlify-lambda build src/lambda",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "netlify-lambda": "^1.4.5",
-    "npm-run-all": "^4.1.5"
-  }
+    "name": "create-react-app-lambda",
+    "version": "0.5.0",
+    "private": true,
+    "dependencies": {
+        "axios": "^0.19.0",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-scripts": "^3.0.1",
+        "@chakra-ui/icons": "^1.0.14",
+        "@chakra-ui/react": "^1.6.5",
+        "@chakra-ui/theme-tools": "^1.1.9",
+        "@emotion/cache": "^11.4.0",
+        "@emotion/react": "^11.4.0",
+        "@emotion/styled": "^11.3.0",
+        "@fontsource/open-sans": "^4.5.0",
+        "@fontsource/raleway": "^4.5.0",
+        "@fontsource/roboto": "^4.5.0",
+        "apexcharts": "^3.27.3",
+        "classnames": "2.3.1",
+        "framer-motion": "^4.1.17",
+        "match-sorter": "6.3.0",
+        "moment": "^2.29.4",
+        "node-sass": "5.0.0",
+        "nouislider": "15.0.0",
+        "react-apexcharts": "^1.3.9",
+        "react-big-calendar": "0.33.2",
+        "react-bootstrap-sweetalert": "^5.2.0",
+        "react-datetime": "3.0.4",
+        "react-github-btn": "^1.2.1",
+        "react-icons": "^4.2.0",
+        "react-jvectormap": "0.0.16",
+        "react-router-dom": "5.2.0",
+        "react-swipeable-views": "0.13.9",
+        "react-table": "7.7.0",
+        "react-tagsinput": "3.19.0",
+        "stylis": "^4.0.10",
+        "stylis-plugin-rtl": "^2.1.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "start:lambda": "netlify-lambda serve src/lambda",
+        "build": "run-p build:**",
+        "build:app": "react-scripts build",
+        "build:lambda": "netlify-lambda build src/lambda",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ],
+    "devDependencies": {
+        "netlify-lambda": "^1.4.5",
+        "npm-run-all": "^4.1.5"
+    }
 }
