--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
     "version": "0.5.0",
     "private": true,
     "dependencies": {
-        "axios": "^0.19.0",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-scripts": "^3.0.1",
+
         "@chakra-ui/icons": "^1.0.14",
         "@chakra-ui/react": "^1.6.5",
         "@chakra-ui/theme-tools": "^1.1.9",
@@ -17,20 +14,24 @@
         "@fontsource/raleway": "^4.5.0",
         "@fontsource/roboto": "^4.5.0",
         "apexcharts": "^3.27.3",
+        "axios": "^0.21.1",
         "classnames": "2.3.1",
         "framer-motion": "^4.1.17",
         "match-sorter": "6.3.0",
         "moment": "^2.29.4",
         "node-sass": "5.0.0",
         "nouislider": "15.0.0",
+        "react": "17.0.2",
         "react-apexcharts": "^1.3.9",
         "react-big-calendar": "0.33.2",
         "react-bootstrap-sweetalert": "^5.2.0",
         "react-datetime": "3.0.4",
+        "react-dom": "17.0.2",
         "react-github-btn": "^1.2.1",
         "react-icons": "^4.2.0",
         "react-jvectormap": "0.0.16",
         "react-router-dom": "5.2.0",
+        "react-scripts": "4.0.3",
         "react-swipeable-views": "0.13.9",
         "react-table": "7.7.0",
         "react-tagsinput": "3.19.0",
